*** Translation Generator WP ***

xxx - version 1.4
* New - Add batch size input field
* New - Add accessibility improvements for screen readers

2024-06-03 - version 1.3
* New: Add project tagline
* New: Add GPT model select field
* New: Add different GPT model translations and update .po file header with selected model
* Tweak: Move excluded terms to settings pages
* Tweak: Update readme.md file with usage instructions
* Fix: Tokens used calculations
* Fix: Tokens cost calculations
* Fix: Remove trailing periods from translations if source sentence doesn't have one

2024-06-01 - version 1.2
* New - Add 20 most widely used WordPress languages to translate files to
* New - Add tabbed navigation
* New - Add OpenAI API field linked to .env file
* New - Add languages select field linked to .env file
* New - Add save notifications
* Tweak - Update translate button colors

2024-05-29 - version 1.1
* New: Add changelog
* Tweak: Show version number to front end
* Tweak: Switch to JS module imports
* Fix: Broken .po files when plural strings are found in .pot file
* Fix: Missing progress bar on subsequent file uploads

2024-05-26 - version 1.0
* Initial release